--- a/templates/index.html
+++ b/templates/index.html
@@ -44,11 +44,33 @@
       
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-	<h1>Interactive Data Science Project Exploratory Analysis Byte Example</h1>
-        <p>This is the Exploratory Analysis Byte of the Interactive Data Science class.</p>
+	<h1>Interactive Data Science Project: Byte 4 Mobile Data Analysis</h1>
+        <p>Question: Is there any significant patterns between my locations and the time period in a day?</p>
+        
+        <div class="text-info">
+        <p>Please refer to the following visualization for the location patterns and time preference. We use a map linked to a bar 
+        plot to study the relationship between the location patterns and the time periods (hours in a day using the UTC time zone). 
+        Select a group of location points on the left hand side to see the corresponding time periods, 
+        and select time periods on the right hand side to see the corresponding location patterns. 
+        The size of the data points indicates the moving speed at the reporting time.</p>
+        </div>
       </div>
       
       <div class="page-header">
+      
+      <div class='tableauPlaceholder' id='viz1539830657187' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;By&#47;Byte-4&#47;TimePreferenceofLocations&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='1080' height='660' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Byte-4&#47;TimePreferenceofLocations' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;By&#47;Byte-4&#47;TimePreferenceofLocations&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1539830657187');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.minWidth='420px';vizElement.style.maxWidth='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+	  </div>
+	
+	  <div class="page-header">	  
+	  <div class="text-info">
+	  <h2>From the visualization</h2>
+	  <p>By selecting the location points at North Oakland, we find that most of the data points are at 3 o'clock (11 PM at local time). 
+	  It is reasonable because this is the route of the blue zone escort, which I usually take when I back home at night. 
+	  By selecting the location points in the east of Shadyside, we find that the majority of data points are 
+	  between 1 o'clock and 12 o'clock (9 PM to 8 AM). This is also reasonable because these are the time periods I will sleep at home.
+	  Therefore, the visualization illustrates the relationship between my locations and the time well. 
+	  </p>
+	  </div>
 	
       </div> <!-- /page-header -->
     </div> <!-- /container -->
@@ -104,7 +126,7 @@ div.tooltip {
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script>
     $( document ).ready(function() {
-	
+	/*
 		/* Start date/time hover graph code
 		*/
 		
@@ -195,7 +217,7 @@ div.tooltip {
 		        .call(yAxis);
 		});
 		//End date/time hover graph
-		
+		*/
 
 	
 	/*  Code for the bar chart, remove the surrounding comment markers to display.
